@@ -1,4 +1,8 @@
 release 1.0.2 (2009-01/02)
+- Fixed issue 148
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=148
+  Inccorect @Path matching for sub-resource methods sharing common path 
+  structures.
 - Support arrays of JAXB XML element and XML type for request and response
   entities on the client and server.
 - Update to Grizzly 1.8.6.4
